--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "check": "prettier --check '{public,src}/**/*.{css,html,js,astro,svelte,md}'",
+    "format": "prettier --write '{public,src}/**/*.{css,html,js,astro,svelte,md}'",
     "astro": "astro"
   },
   "devDependencies": {
-    "astro": "^1.0.5"
+    "@astrojs/svelte": "^1.0.0",
+    "astro": "^1.0.5",
+    "prettier-plugin-astro": "^0.0.12",
+    "svelte": "^3.49.0"
+  },
+  "dependencies": {
+    "sass": "^1.49.9"
   }
 }
