--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/svelte": "^1.0.0",
     "astro": "^1.0.5",
     "prettier-plugin-astro": "^0.0.12",
+    "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.49.0"
   },
   "dependencies": {
