--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@astrojs/svelte": "^1.0.0",
     "astro": "^1.0.5",
-    "prettier-plugin-astro": "^0.0.12",
+    "prettier-plugin-astro": "^0.1.0-next.5",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.49.0"
   },
